--- a/.gitignore
+++ b/.gitignore
@@ -657,3 +657,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,rider,aspnetcore,csharp
+# local demo db
+*.db
