chore: update workflow only Part B.sln

--- a/.github/workflows/main_glossaryapp.yml
+++ b/.github/workflows/main_glossaryapp.yml
@@ -9,6 +9,10 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  PROJECT_PATH: "Part B/Part B/Part B.csproj"
+  TESTS_PATH:  "Part B/PartBTests/PartBTests.csproj"
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,17 +27,22 @@ jobs:
         with:
           dotnet-version: '9.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Build Part B
+        run: |
+          dotnet restore "$PROJECT_PATH"
+          dotnet build "$PROJECT_PATH" -c Release --no-restore
+
+      - name: Test PartBTests
+        run: dotnet test "$TESTS_PATH" -c Release --no-build
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
+        run: dotnet publish "$PROJECT_PATH" -c Release -o ${{ env.DOTNET_ROOT }}/myapp
+    
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{ env.DOTNET_ROOT }}/myapp
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,6 +56,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+          path: ${{ env.DOTNET_ROOT }}/myapp
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -61,5 +71,5 @@ jobs:
         with:
           app-name: 'GlossaryApp'
           slot-name: 'Production'
-          package: .
+          package: ${{ env.DOTNET_ROOT }}/myapp
           
