--- a/.github/workflows/main_glossaryapp.yml
+++ b/.github/workflows/main_glossaryapp.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-          path: ${{ env.DOTNET_ROOT }}/myapp
+          path: ./myapp
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -71,5 +71,5 @@ jobs:
         with:
           app-name: 'GlossaryApp'
           slot-name: 'Production'
-          package: ${{ env.DOTNET_ROOT }}/myapp
+          package: ./myapp
           
