--- a/Part B/Part B/appsettings.Production.json
+++ b/Part B/Part B/appsettings.Production.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=/home/data/glossary.db"
-  }
+  },
+  "AllowedFrontend": "https://proud-cliff-02da6df00.3.azurestaticapps.net"
 }
