fix: set correct MIME for .mjs/.js

--- a/Part B/frontend-glossary-app/public/staticwebapp.config.json
+++ b/Part B/frontend-glossary-app/public/staticwebapp.config.json
@@ -1,15 +1,9 @@
 {
-    "responseOverrides": {
-        "404": {
-            "rewrite": "/index.html"
-        }
+    "navigationFallback": {
+        "rewrite": "/index.html"
     },
     "mimeTypes": {
         ".mjs": "application/javascript",
-        ".js": "application/javascript",
-        ".css": "text/css",
-        ".json": "application/json",
-        ".map": "application/json",
-        ".wasm": "application/wasm"
+        ".js": "application/javascript"
     }
 }
