--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# SQLight
+Part B/Part B/app.db
+Part B/Part B/app.db-shm
+Part B/Part B/app.db-wal
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
